--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=2.3.0
 kotlin_version=1.8.21
 logback_version=1.2.11
 kotlin.code.style=official
+confluent_version=6.1.1
+ak_version=2.7.0
