fixed the secret keys issues

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,4 +5,6 @@ coinmarketcap_listing_url = "https://pro-api.coinmarketcap.com/v1/cryptocurrency
 coinmarketcap_quote_url = "https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest"
 coinmarketcap_apikey = "0f42271f-74af-4b7d-b946-fa9933b9a1f6"
 
-KAFKA_URL = "kafka+ssl://ec2-23-23-10-227.compute-1.amazonaws.com:9096,kafka+ssl://ec2-34-236-119-157.compute-1.amazonaws.com:9096,kafka+ssl://ec2-35-174-134-101.compute-1.amazonaws.com:9096,kafka+ssl://ec2-35-174-66-193.compute-1.amazonaws.com:9096,kafka+ssl://ec2-35-169-232-101.compute-1.amazonaws.com:9096,kafka+ssl://ec2-34-238-5-249.compute-1.amazonaws.com:9096,kafka+ssl://ec2-35-172-13-3.compute-1.amazonaws.com:9096,kafka+ssl://ec2-35-173-86-52.compute-1.amazonaws.com:9096"
+KAFKA_URL = "ec2-3-71-158-169.eu-central-1.compute.amazonaws.com:9092"
+MONGODB_URL = "mongodb+srv://pascarl:pasaka001@coinx.lif2vaj.mongodb.net/"
+DATABASE_NAME = "Coinx"
