Done with processing buy orders

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,8 +23,8 @@ EXCHANGE_RATE_BASE_URL = "https://api.currencyapi.com/"
 EXCHANGE_RATE_API_KEY = "cur_live_xRlzjZ34LKeGJMwonDnHoqPBgwnSTJlSMztnbGgj&currencies"
 
 //Coinx SMPT Config
-USERNAME = "no-reply@coinx.co.ke"
-PASSWORD = "qqtw esiw nvek eexd"
-SMTP_SERVER_ADDRESS  = "smtp.gmail.com"
+USERNAME = "admin@coinx.co.ke"
+PASSWORD = "(-5VLeN3L5tbd7"
+SMTP_SERVER_ADDRESS  = "sm1.cloudoon.com"
 
 
